--- a/UWP SoundBoard/UWP SoundBoard/MainPage.xaml
+++ b/UWP SoundBoard/UWP SoundBoard/MainPage.xaml
@@ -88,7 +88,7 @@
                     <MediaElement Name="MyMediaElement"
                                   AutoPlay="True"/>
 
-                    <TextBlock Name="CategoryTextBlock" Text="All Sounds" FontSize="24" IsColorFontEnabled="False" />
+                    <TextBlock Name="CategoryTextBlock" Text="All Sounds" FontSize="24" Foreground="Black" />
 
                     <GridView Grid.Row="1"
                               Name="SoundGridView"
