--- a/UWP Weather/UWP Weather/MainPage.xaml
+++ b/UWP Weather/UWP Weather/MainPage.xaml
@@ -5,10 +5,13 @@
     xmlns:local="using:UWP_Weather"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
 
     <Grid>
-
+        <StackPanel Background="HotPink">
+            <Button Content="Get Weather" Click="Button_Click" />
+            <TextBlock Name="ResultTextBlock" />
+        </StackPanel>
     </Grid>
+    
 </Page>
