--- a/HeroExplorer/HeroExplorer/MainPage.xaml
+++ b/HeroExplorer/HeroExplorer/MainPage.xaml
@@ -5,10 +5,10 @@
     xmlns:local="using:HeroExplorer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
 
     <Grid>
+        <Button Click="Button_Click" />
 
     </Grid>
 </Page>
