--- a/HeroExplorer/HeroExplorer/MainPage.xaml
+++ b/HeroExplorer/HeroExplorer/MainPage.xaml
@@ -8,7 +8,12 @@
     mc:Ignorable="d">
 
     <Grid>
-        <Button Click="Button_Click" />
+        <Button Click="Button_Click"
+                Height="75"
+                Width="150"
+                Content="Make the Call"
+                FontSize="20"
+                Margin="20,0,0,0"/>
 
     </Grid>
 </Page>
