--- a/HeroExplorer/HeroExplorer/MainPage.xaml
+++ b/HeroExplorer/HeroExplorer/MainPage.xaml
@@ -5,15 +5,58 @@
     xmlns:local="using:HeroExplorer"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:data="using:HeroExplorer.Models"
+    Loaded="Page_Loaded"
     mc:Ignorable="d">
 
     <Grid>
-        <Button Click="Button_Click"
-                Height="75"
-                Width="150"
-                Content="Make the Call"
-                FontSize="20"
-                Margin="20,0,0,0"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="30" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <ListView Name="MasterListView" ItemsSource="{x:Bind MarvelCharacters}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType ="data:Character">
+                    <StackPanel Orientation="Horizontal" Margin="10, 5, 0, 5">
+                        <Ellipse Width="45"
+                                 Height="45">
+                            <Ellipse.Fill>
+                                <ImageBrush ImageSource="{x:Bind thumbnail.small}" />
+                            </Ellipse.Fill>
+                        </Ellipse>
+                        <TextBlock Text="{x:Bind name}"
+                                   VerticalAlignment="center"
+                                   FontSize="18"
+                                   Margin="10,0,0,0"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <Grid Name="DetailGrid" Grid.Column="1" Grid.Row="0"> 
+            
+        </Grid>
+
+        <TextBlock Text="Data provided by Marvel. © 2023 MARVEL"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center" 
+                   Grid.ColumnSpan="2"
+                   Grid.Row="2"/>
+
+        <ProgressRing Name="MyProgressRing"
+                      Width="100"
+                      Height="100"
+                      Foreground="Gray"
+                      Grid.ColumnSpan="2"
+                      Grid.RowSpan="3"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Center" />
 
     </Grid>
 </Page>
