--- a/HeroExplorer/HeroExplorer/MainPage.xaml
+++ b/HeroExplorer/HeroExplorer/MainPage.xaml
@@ -20,7 +20,10 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <ListView Name="MasterListView" ItemsSource="{x:Bind MarvelCharacters}">
+        <ListView Name="MasterListView" 
+                  IsItemClickEnabled="True"
+                  ItemClick="MasterListView_ItemClick"
+                  ItemsSource="{x:Bind MarvelCharacters}">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType ="data:Character">
                     <StackPanel Orientation="Horizontal" Margin="10, 5, 0, 5">
@@ -39,8 +42,34 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <Grid Name="DetailGrid" Grid.Column="1" Grid.Row="0"> 
-            
+        <Grid Name="DetailGrid" Grid.Column="1" Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Image Name ="DetailImage" 
+                       Grid.Column="0" 
+                       Grid.RowSpan="2"  />
+                <TextBlock Name="DetailNameTextBlock" 
+                           FontSize="32" 
+                           Grid.Column="1" />
+                <TextBlock Name="DetailDescriptionTextBlock" 
+                           Grid.Row="1" 
+                           Grid.Column="1"
+                           TextWrapping="Wrap" />
+            </Grid>
         </Grid>
 
         <TextBlock Text="Data provided by Marvel. © 2023 MARVEL"
