Solution to Hamburger Nav

--- a/HamburgerHaven/HamburgerHaven/Financial.xaml
+++ b/HamburgerHaven/HamburgerHaven/Financial.xaml
@@ -9,6 +9,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <Image Source="Assets/Financial.png"
+               VerticalAlignment="Top"/>
     </Grid>
 </Page>
