--- a/GoNuts/GoNuts/MainPage.xaml
+++ b/GoNuts/GoNuts/MainPage.xaml
@@ -7,6 +7,15 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.Resources>
+        <Style TargetType="Button" x:Key="NavigationButtonStyle">
+            <Setter Property="Background" Value="Black" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="VerticalAlignment" Value="Stretch" />
+            <Setter Property="BorderBrush" Value="Gray" />
+            <Setter Property="BorderThickness" Value="0,0,2,0" />
+        </Style>
+    </Page.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -23,10 +32,7 @@
             </Grid.ColumnDefinitions>
 
             <Button Grid.Column="0" 
-                    Background="Black" 
-                    Foreground="White" 
-                    HorizontalAlignment="Stretch" 
-                    VerticalAlignment="Stretch">
+                    Style="{StaticResource NavigationButtonStyle}">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="Assets/donut-icon.png" Height="20" Width="20"/>
                     <TextBlock Text="Donut" Foreground="White"/>
@@ -41,7 +47,9 @@
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
             <Frame Name="MyFrame"></Frame>
-            <Image Source="Assets/Background.jpg" Grid.Column="1" />
+            <Image Source="Assets/Background.jpg"
+                   Grid.Column="1"
+                   Stretch="UniformToFill"/>
         </Grid>
         
     </Grid>
