--- a/GoNuts/GoNuts/CoffeePage.xaml
+++ b/GoNuts/GoNuts/CoffeePage.xaml
@@ -7,8 +7,61 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Page.Resources>
+        <Style TargetType="Button" x:Key="FlyoutButton">
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+    </Page.Resources>
 
-    <Grid>
+    <Grid Background="#3C1F19">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
+        <Image Style="{StaticResource WhiteLogoStyle}" />
+
+        <StackPanel Grid.Row="1" 
+                    HorizontalAlignment="Center"
+                    Orientation="Horizontal">
+            <Button Content="Roast" 
+                    Style="{StaticResource FlyoutButton}">
+                <Button.Flyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem Text="None" Click="Roast_Click"/>
+                        <MenuFlyoutItem Text="Dark" Click="Roast_Click"/>
+                        <MenuFlyoutItem Text="Medium" Click="Roast_Click"/>
+                    </MenuFlyout>
+                </Button.Flyout>
+            </Button>
+            <Button Content="Sweetener" 
+                    Style="{StaticResource FlyoutButton}">
+                <Button.Flyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem Text="None" Click="Sweet_Click"/>
+                        <MenuFlyoutItem Text="Sugar" Click="Sweet_Click"/>
+                    </MenuFlyout>
+                </Button.Flyout>
+            </Button>
+            <Button Content="Cream" 
+                    Style="{StaticResource FlyoutButton}">
+                <Button.Flyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem Text="None" Click="Cream_Click"/>
+                        <MenuFlyoutItem Text="2%" Click="Cream_Click"/>
+                        <MenuFlyoutItem Text="Whole Milk" Click="Cream_Click"/>
+                    </MenuFlyout>
+                </Button.Flyout>
+            </Button>
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="2">
+            <TextBlock Text="Coffee: " Style="{StaticResource LableStyle}" />
+            <TextBlock Name="ResultTextBlock" Style="{StaticResource LableStyle}" />
+        </StackPanel>
+        
     </Grid>
 </Page>
