--- a/UWP SoundBoard/UWP SoundBoard/MainPage.xaml
+++ b/UWP SoundBoard/UWP SoundBoard/MainPage.xaml
@@ -91,6 +91,9 @@
                     <GridView Grid.Row="1" 
                               Name="SoundGridView"
                               SelectionMode="None"
+                              AllowDrop="True"
+                              Drop="SoundGridView_Drop"
+                              DragOver="SoundGridView_DragOver"
                               ItemsSource="{x:Bind Sounds}"
                               IsItemClickEnabled="True"
                               ItemClick="SoundGridView_ItemClick">
